# apple-music-discord-activity

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs
